<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">PrintDemoV4.0</string>
    <string name="bluetooth">bluetooth</string>
    <string name="wifi">wifi</string>
    <string name="usb">usb</string>
    <!--BTPrinterDemo-->
    <string name="not_connected">Please Connect BT Printer. (Menu-&amp;gt;Connect)</string>
    <string name="bt_not_enabled">Bluetooth is not available</string>
    <string name="bt_has_on">Bluetooth has opened</string>
    <string name="bt_has_off">Bluetooth has closed</string>
    <string name="bt_connecting">Bluetooth connecting...</string>
    <string name="bt_connect_success">Bluetooth connect success</string>
    <string name="bt_connect_failed">Bluetooth connect failed</string>
    <string name="bt_connect_closed">Bluetooth connect has closed</string>
    <string name="bt_print_success">Print Success</string>
    <string name="bt_print_failed">Print Failed</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected">Connected</string>
    <string name="title_not_connected">Not Connected.</string>
    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Please select a device to connect</string>
    <string name="none_paired">No devices has been paired</string>
    <string name="has_paired">paired</string>
    <string name="not_paired">not paired</string>
    <string name="rePaire_connect">Re-pair And Connect</string>
    <string name="unpair">Unpair</string>
    <string name="paire_connect">Pair And Connect</string>
    <string name="connect_paired">Connect</string>
    <string name="select_options">Select Options</string>
    <string name="none_found">No devices found</string>
    <string name="no_bounded_device">Don\'t found device which name start with %s</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for new devices</string>
    <!-- Options Menu -->
    <string name="connect">Open Connect</string>
    <string name="disconnect">Close Connection(%1$s)</string>
    <!-- main.xml -->
    <string name="edit_hint">Printer Name(such as T9)</string>
    <string name="print_text">Print Text</string>
    <string name="print_table">Print Table</string>
    <string name="print_image">Print Image</string>
    <string name="print_custom_image">Print Custom Image</string>
    <string name="print_note">Print Note</string>
    <string name="print_title">Print Title</string>
    <string name="bar_code_hint">Input bar code, such as: No.123456</string>
    <string name="print_bar_code">Print Bar Code</string>
    <string name="open_file">open file</string>
    <string name="save_file">save file</string>
    <string name="save_as_file">save as file</string>
    <string name="print_file">print File</string>
    <string name="save_ok">OK</string>
    <string name="save_cancel">Cancel</string>
    <string name="toast_input_name">Please input file name!</string>
    <string name="toast_save_null">Please don\'t save null file!</string>
    <string name="toast_print_null">Please don\'t print null file!</string>
    <string name="toast_save_success">Save success!</string>
    <string name="input_file_name">Please input file name:</string>
    <string name="back_to_root">Back to root...</string>
    <string name="back_to_pre">Back to previous...</string>
    <string name="file_manager">File Manager</string>
    <string name="editText_print">Text Print</string>
    <string name="example_text">Android-SDK is a software development kit
    	that are used to secondary development of printer,
    	which is provided for customers.
   		It uses Bluetooth communication protocol,
    	and intended to be used application development of Android smart device that have BLUETOOTH interface,
    	such as HTC, Motorola, Samsung and other brands of mobile phones and Android system Tablet.
    	This SDK is basis on the ESC/POS command standard,
    	printer with Bluetooth function are suitable for the printing of the system device.
    	Typical application of Bluetooth phones and portable printer constitutes mobile printing Terminal.
    	That is widely used in the areas of mobile printing requirements.
    </string>
    <string name="company_name">printer company</string>
    <string name="shop_company_title">NingBo YueHu Shop</string>
    <string name="shop_num">Shop Num: </string>
    <string name="shop_receipt_num">Receipt Num: </string>
    <string name="shop_cashier_num">Cashier Num: </string>
    <string name="shop_receipt_date">Receipt Date: </string>
    <string name="shop_print_time">Print Time: </string>
    <string name="shop_goods_number">Goods Quantity: </string>
    <string name="shop_goods_total_price">Total: </string>
    <string name="shop_payment">Payment: </string>
    <string name="shop_change">Change: </string>
    <string name="shop_company_name">Company Name: The Jiangsu Yiwuyishi Houseware Co., Ltd.</string>
    <string name="shop_company_site">Company Site: </string>
    <string name="shop_company_address">Address: Dongchang Road on the 12th, Ningbo City, Jiangsu Province</string>
    <string name="shop_company_tel">TEL: </string>
    <string name="shop_Service_Line">Service Line: </string>
    <string name="shop_thanks">Thank you,welcome to come again!</string>
    <string name="shop_demo">Demo Version!</string>
    <string name="note_title">Name; Quantity; unit price; Amount</string>
    <string name="coffee">Coffee</string>
    <string name="tableware">Tableware</string>
    <string name="peanuts">Fried peanuts</string>
    <string name="cucumber">Garlic Cucumber</string>
    <string name="frog">Griddle Frog</string>
    <string name="rice">Rice</string>
    <string name="company_sub_title">     Focused, reliable, excellent brand of specialty printers</string>
    <string name="bags">Storage bags</string>
    <string name="umbrella">Umbrella</string>
    <string name="hook">Wire hook</string>
    <string name="choose_barcode_type">BarCode Type:</string>
    <string name="choose_paper_width">Paper Width:</string>
    <string name="choose_printer_type">Printer Type:</string>
    <string name="choose_Encoding">Encoding Type:</string>
    <string name="printer_type_remin">Thermal</string>
    <string name="printer_type_styuls">Stylus</string>
    <string name="help">help</string>
    <string name="input_printer_name">printer name</string>
    <string name="shop_note_num">receipt number:</string>
    <string name="print_codepage">print CodePage</string>
    <string name="print_biaoqian">print Biaoqian</string>
    <string name="btn_help">Help</string>
    <string name="btn_exit">Exit</string>
    <string name="button_back">back</string>
    <string-array name="codepage">
        <item>CP437 [U.S.A., Standard Europe]</item>
        <item>Katakana</item>
        <item>CP850 [Multilingual]</item>
        <item>CP860 [Portuguese]</item>
        <item>CP863 [Canadian-French]</item>
        <item>CP865 [Nordic]</item>
        <item>WCP1251 [Cyrillic]</item>
        <item>CP866 Cyrilliec #2</item>
        <item>MIK[Cyrillic /Bulgarian]</item>
        <item>CP755 [East Europe，Latvian 2]</item>
        <item>Iran</item>
        <item>reserve</item>
        <item>reserve</item>
        <item>reserve</item>
        <item>reserve</item>
        <item>CP862 [Hebrew]</item>
        <item>WCP1252 Latin I</item>
        <item>WCP1253 [Greek]</item>
        <item>CP852 [Latina 2]</item>
        <item>CP858 Multilingual Latin Ⅰ+Euro)</item>
        <item>Iran II</item>
        <item>Latvian</item>
        <item>CP864 [Arabic]</item>
        <item>ISO-8859-1 [West Europe]</item>
        <item>CP737 [Greek]</item>
        <item>WCP1257 [Baltic]</item>
        <item>Thai</item>
        <item>CP720[Arabic]</item>
        <item>CP855</item>
        <item>CP857[Turkish]</item>
        <item>WCP1250[Central Eurpoe]</item>
        <item>CP775</item>
        <item>WCP1254[Turkish]</item>
        <item>WCP1255[Hebrew]</item>
        <item>WCP1256[Arabic]</item>
        <item>WCP1258[Vietnam]</item>
        <item>ISO-8859-2[Latin 2]</item>
        <item>ISO-8859-3[Latin 3]</item>
        <item>ISO-8859-4[Baltic]</item>
        <item>ISO-8859-5[Cyrillic]</item>
        <item>ISO-8859-6[Arabic]</item>
        <item>ISO-8859-7[Greek]</item>
        <item>ISO-8859-8[Hebrew]</item>
        <item>ISO-8859-9[Turkish]</item>
        <item>ISO-8859-15 [Latin 3]</item>
        <item>Thai2</item>
        <item>CP856</item>
        <item>Select All</item>
    </string-array>
    <string-array name="barcode2">
        <item>PDF417</item>
        <item>QRCODE</item>
        <item>DATAMATRIX</item>
        <item>Select All</item>
    </string-array>
    <string-array name="barcode1">
        <item>CODE39</item>
        <item>CODEBAR</item>
        <item>ITF</item>
        <item>CODE93</item>
        <item>CODE128</item>
        <item>UPC-A</item>
        <item>UPC-E</item>
        <item>EAN13</item>
        <item>EAN8</item>
        <item>Select All</item>
    </string-array>
    <string name="no_conn_address">address：unconnected</string>
    <string name="no_conn_name">name：unconnected</string>
    <string name="str_address">address：</string>
    <string name="str_name">name：</string>
    <string name="str_message">tip：</string>
    <string name="str_connlast">whether connect to last device？</string>
    <string name="yesconn">connect</string>
    <string name="str_resel">search again</string>
    <string name="str_wifi_now">connected WIFI：</string>
    <string name="str_wifi_no">unconnected network</string>
    <string name="print">print</string>
    <string name="conn_failed">connection fail</string>
    <string name="conn_closed">connection closed</string>
    <string name="conn_no">can not connect</string>
    <string name="password">input password</string>
    <string name="cancel">cancel</string>
    <string name="barcode">select Barcode</string>
    <string name="codepage">select codepage</string>
    <string name="str_image">show picture：</string>
    <string name="str_canvas">show canvas：</string>
    <string name="str_file">show files：</string>
    <string name="str_label">show label：</string>
    <string name="str_text">show TEXT：</string>
    <string name="str_text_left">left-aligned text</string>
    <string name="str_text_right">right-aligned text</string>
    <string name="str_text_center">center-aligned text</string>
    <string name="str_text_strong">bold text</string>
    <string name="str_text_underline">underline text：</string>
    <string name="str_text_height">multifont size:</string>
    <string name="str_note">show receipt</string>
    <string name="str_show">Demo effect</string>
    <string name="note_label">only label printer</string>
    <string name="times">times</string>
    <string name="bigger">magnify</string>
    <string name="bigger1">result display:</string>
    <string name="button_connect_principle">help: Connection Theory of printer</string>
    <string name="button_print_principle">help: theory of printer</string>
    <string name="button_recon_listen">help: Bluetooth automatic reconnect</string>
    <string name="button_discon_listen">help: Bluetooth disconnect monitor</string>
    <string name="button_address_bouds">help: Bluttooth quick connect</string>
</resources>
