<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test"
    android:orientation="vertical"
    android:layout_margin="2dp" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="40.0dip"
        android:background="#FFFFFF"
        android:layout_margin="2dp" >

        <Button
            android:id="@+id/btnBluetooth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/graybutton"
            android:gravity="center"
            android:text="@string/bluetooth"
            android:textColor="#000000"
            android:textSize="20.0dip" />

        <Button
            android:id="@+id/btnWifi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/graybutton"
            android:gravity="center"
            android:text="@string/wifi"
            android:textColor="#000000"
            android:textSize="20.0dip" />

        <Button
            android:id="@+id/btnUsb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/graybutton"
            android:gravity="center"
            android:text="@string/usb"
            android:textColor="#000000"
            android:textSize="20.0dip" />
    </LinearLayout>

    <ImageView
        android:id="@+id/cursor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="matrix"
        android:src="@drawable/sanjiao" />

<!--     <Button
        android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:background="@drawable/btn_style_green"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/connect"
        android:textColor="#000"
        android:textSize="24sp" /> -->


    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:clickable="true"
    android:background="@drawable/btn_style_green">

   <TextView
       android:id="@+id/connect_state"
       android:layout_width="0dp"
       android:layout_height="50dp"
       android:layout_marginLeft="10dp"
       android:layout_weight="1.0"
       android:gravity="center_vertical"
       android:text="@string/connect"
       android:textColor="#000"

       />

   <LinearLayout
    android:orientation="vertical"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:layout_marginLeft="10dp"
    android:layout_weight="2.0">

         <TextView
       android:id="@+id/connect_name"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:layout_marginLeft="10dp"
       android:layout_weight="1.0"
       android:gravity="center_vertical"
       android:text="名称"
       android:textColor="#000"

       />
             <TextView
      android:id="@+id/connect_address"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:layout_marginLeft="10dp"
       android:layout_weight="1.0"
       android:gravity="center_vertical"
       android:text="地址"
       android:textColor="#000"

       />


    </LinearLayout>

</LinearLayout>




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TableLayout
                android:id="@+id/tab1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                >

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/choose_printer_type"
                        android:textColor="#ffffff"

                        android:layout_weight="1.0"/>

                    <RadioButton
                        android:id="@+id/type_remin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/printer_type_remin"
                        android:textColor="#ffffff"
                        android:layout_weight="1.0" />

                    <RadioButton
                        android:id="@+id/type_styuls"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/printer_type_styuls"
                        android:textColor="#ffffff"
                         android:layout_weight="1.0"/>
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dip"
                        android:gravity="center_vertical"
                        android:text="@string/choose_paper_width"
                        android:textColor="#ffffff"
                         android:layout_weight="1.0"/>

                    <RadioButton
                        android:id="@+id/width_58mm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="58mm"
                        android:textColor="#ffffff"
                         android:layout_weight="1.0"/>

                    <RadioButton
                        android:id="@+id/width_80mm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="80mm"
                        android:textColor="#ffffff"
                         android:layout_weight="1.0"/>
                </TableRow>
            </TableLayout>



      <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
          android:layout_below="@id/tab1" >


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"



                >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"

                    >

                    <Button
                        android:id="@+id/btnPrintText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/preference_single_item"
                        android:text="@string/print_text"
                        android:textColor="#000"
                        android:textSize="20sp"
                         android:layout_weight="1.0"
                       />

                    <Button
                        android:id="@+id/btnPrintFile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:background="@drawable/preference_single_item"
                        android:text="@string/print_file"
                        android:textColor="#000"
                        android:textSize="20sp"
                         android:layout_weight="1.0"
                        />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btnPrintBarCode"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/preference_single_item"
                        android:text="@string/print_bar_code"
                        android:textColor="#000"
                        android:textSize="20sp"
                         android:layout_weight="1.0"/>

                    <Button
                        android:id="@+id/btnPrintImage"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/preference_single_item"
                        android:text="@string/print_image"
                        android:textColor="#000"
                        android:textSize="20sp"
                         android:layout_weight="1.0"/>

                </TableRow>



                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

             <!--        <Button
                        android:id="@+id/btnPrintTable"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/graybutton"
                        android:text="@string/print_table"
                        android:textColor="#000"
                        android:textSize="20sp"
                         android:layout_weight="1.0"/> -->

                    <Button
                        android:id="@+id/btnPrintNote"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/preference_single_item"
                        android:text="@string/print_note"
                        android:textColor="#000"
                        android:textSize="20sp"
                         android:layout_weight="1.0"/>

                     <Button
                        android:id="@+id/btnPrintCodePage"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/preference_single_item"
                        android:text="@string/print_codepage"
                        android:textColor="#000"
                        android:textSize="20sp"
                         android:layout_weight="1.0" />

                </TableRow>

                   <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >



                    <Button
                        android:id="@+id/btnPrintBiaoqian"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/preference_single_item"
                        android:text="@string/print_biaoqian"
                        android:textColor="#000"
                        android:textSize="20sp"
                         android:layout_weight="1.0"/>

                     <Button
                        android:id="@+id/btnHelp"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/preference_single_item"
                        android:text="@string/btn_help"
                        android:textColor="#000"
                        android:textSize="20sp"
                         android:layout_weight="1.0"/>

                </TableRow>


                    <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >



                    <Button
                        android:id="@+id/btnExit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:background="@drawable/preference_single_item"
                        android:text="@string/btn_exit"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:layout_weight="1.0"/>

                </TableRow>
            </TableLayout>

          </ScrollView>
        </RelativeLayout>



    <ListView
        android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="invisible" />

</LinearLayout>